fix: Vertical spacing of cog

--- a/src/LoadingCog.css
+++ b/src/LoadingCog.css
@@ -7,8 +7,9 @@
 	will-change: transform;
 	position: absolute;
 	right: 0;
-	top: 0;
-	margin: 1.25%;
+	top: 10%;
+	bottom: 10%;
+	margin-right: 1.25%;
 }
 
 .loadingCog:active,
